--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Apr 10, 2023</b> <a href="https://chichinghsu.medium.com/%E5%BE%AE%E8%BB%9F-paul-allen-%E5%9B%9E%E6%86%B6%E9%8C%84-idea-man-eeaa5df29a19">微軟 Paul Allen 回憶錄 Idea Man</a><br>
 <b>Feb 12, 2023</b> <a href="https://chichinghsu.medium.com/%E6%B3%A2%E7%BE%85%E7%9A%84%E6%B5%B7%E4%B8%89%E5%B0%8F%E5%9C%8B%E4%B9%8B%E6%84%9B%E6%B2%99%E5%B0%BC%E4%BA%9E%E9%9B%9C%E8%AB%87-9c380adb21dd">波羅的海三小國之愛沙尼亞雜談</a><br>
 <b>Jan 29, 2023</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E9%91%91%E5%BE%80%E7%9F%A5%E4%BE%86-ce60df40d748">2023 年第一篇之鑑往知來</a><br>
 <b>Nov 20, 2022</b> <a href="https://chichinghsu.medium.com/%E6%95%99%E4%BD%A0%E5%A6%82%E4%BD%95%E8%B2%B7%E5%88%B0%E5%8D%8A%E5%83%B9%E5%BE%B7%E5%9C%8B%E7%81%AB%E8%BB%8A%E7%A5%A8-335b326e2206">教你如何買到半價德國火車票</a><br>
 <b>Nov 2, 2022</b> <a href="https://chichinghsu.medium.com/%E6%8D%B7%E5%85%8B%E5%B8%83%E6%8B%89%E6%A0%BC-2022-%E5%B9%B4%E7%A7%8B-148f6d8747d5">捷克布拉格 2022 年秋</a><br>
-<b>Sept 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%98%87%E9%BB%8E%E4%B8%96%E5%B0%84%E6%93%8A%E7%AF%80%E8%88%87%E7%A7%8B%E5%A4%A9%E5%B1%85%E7%95%99%E8%AD%89-a2966f791d0b">蘇黎世射擊節與秋天居留證</a><br>
 
 <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
@@ -96,6 +96,7 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <div class="category" id="books"><h3>書 Books</h3></div>
+<b>Apr 10, 2023</b> <a href="https://chichinghsu.medium.com/%E5%BE%AE%E8%BB%9F-paul-allen-%E5%9B%9E%E6%86%B6%E9%8C%84-idea-man-eeaa5df29a19">微軟 Paul Allen 回憶錄 Idea Man</a><br>
 <b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628">《東京，若即若離》徘徊過多少櫥窗</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
 <b>July 17, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A2%AB%E8%A8%8E%E5%8E%AD%E7%9A%84%E5%8B%87%E6%B0%A3-%E4%BA%8C%E9%83%A8%E6%9B%B2%E5%AE%8C%E7%B5%90%E7%AF%87-%E6%88%91%E5%B7%B2%E7%B6%93%E6%B2%92%E5%AF%A6%E9%AB%94%E4%B8%AD%E6%96%87%E6%9B%B8%E5%8F%AF%E7%9C%8B%E4%BA%86-4bbd17de961c">《被討厭的勇氣 二部曲完結篇》我已經沒實體中文書可看了</a><br>
