--- a/old_articles.html
+++ b/old_articles.html
@@ -1,3 +1,10 @@
+---
+layout: page
+permalink: /old_articles/
+title: Old Articles
+---
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,7 +31,7 @@ b {padding-left:2em; }
 </style>
 </head>
 <body>
-<h1>Articles</h1>
+<!-- <h1>Articles</h1> -->
 
 <b><a href="https://medium.com/@chichinghsu">CCHsu @medium</a></b><br>
 <b>Contact: hsuch (at) ethz.ch </b>
@@ -35,7 +42,7 @@ b {padding-left:2em; }
 <b>Feb 12, 2023</b> <a href="https://chichinghsu.medium.com/%E6%B3%A2%E7%BE%85%E7%9A%84%E6%B5%B7%E4%B8%89%E5%B0%8F%E5%9C%8B%E4%B9%8B%E6%84%9B%E6%B2%99%E5%B0%BC%E4%BA%9E%E9%9B%9C%E8%AB%87-9c380adb21dd">波羅的海三小國之愛沙尼亞雜談</a><br>
 <b>Jan 29, 2023</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E9%91%91%E5%BE%80%E7%9F%A5%E4%BE%86-ce60df40d748">2023 年第一篇之鑑往知來</a><br>
 
-<h3>文章分類 Category</h3>
+<!-- <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
 <div class="indent_right"><b><a href="#books">書 Books</a></b></div>
 <div class="indent_left"><b><a href="#switzerland">瑞士 Switzerland</a></b></div>
@@ -44,7 +51,7 @@ b {padding-left:2em; }
 <div class="indent_right"><b><a href="#data">數據分析 Data</a></b></div>
 <div class="indent_left"><b><a href="#architecture">建築 Architecture</a></b></div>
 <div class="indent_right"><b><a href="#movies">電影與影集 Movies and Series</a></b></div>
-
+ -->
 <h3>如果你不知道要看哪篇 Random Articles</h3>
 <b>[申請學校] <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
 <b>[廢文] <a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6">在家工作雜談與 2021的暴雪</a></b><br>
