--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-permalink: /old_articles/
-title: Old Articles
+permalink: /index/
+title: All Articles
+order: 1
 ---
 
 
@@ -37,10 +38,15 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
-<b>Apr 29, 2023</b> <a href="https://chichinghsu.medium.com/%E8%8A%AC%E8%98%AD%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-2023-%E5%B9%B4%E6%98%A5-46d3a72a955b">芬蘭赫爾辛基 2023 年春</a><br>
-<b>Apr 10, 2023</b> <a href="https://chichinghsu.medium.com/%E5%BE%AE%E8%BB%9F-paul-allen-%E5%9B%9E%E6%86%B6%E9%8C%84-idea-man-eeaa5df29a19">微軟 Paul Allen 回憶錄 Idea Man</a><br>
-<b>Feb 12, 2023</b> <a href="https://chichinghsu.medium.com/%E6%B3%A2%E7%BE%85%E7%9A%84%E6%B5%B7%E4%B8%89%E5%B0%8F%E5%9C%8B%E4%B9%8B%E6%84%9B%E6%B2%99%E5%B0%BC%E4%BA%9E%E9%9B%9C%E8%AB%87-9c380adb21dd">波羅的海三小國之愛沙尼亞雜談</a><br>
-<b>Jan 29, 2023</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E9%91%91%E5%BE%80%E7%9F%A5%E4%BE%86-ce60df40d748">2023 年第一篇之鑑往知來</a><br>
+<b>June 30, 2024</b> <a href="https://chichinghsu.medium.com/%E8%BF%BD%E6%A0%B9%E7%A9%B6%E6%9F%A2%E7%9A%84%E7%B2%BE%E7%A5%9E-f8cf1280f4a1">追根究柢的精神</a><br>
+<b>May 4, 2024</b> <a href="https://chichinghsu.medium.com/%E8%8A%AC%E8%98%AD%E8%88%AA%E7%A9%BA-%E6%9D%B1%E4%BA%AC%E7%BE%BD%E7%94%B0-%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-0c28960ee0fc">芬蘭航空 東京羽田 — 赫爾辛基</a><br>
+<b>Feb 27, 2024</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AF%E9%9B%9C%E8%AB%87-50504948fd05">瑞士鐵路雜談</a><br>
+<b>Feb 4, 2024</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E5%BA%95%E5%9B%9E%E5%8F%B0%E8%A8%98-daf155eddd09">2023 年底回台記</a><br>
+<b>Nov 26, 2023</b> <a href="https://chichinghsu.medium.com/%E4%BC%8A%E5%87%A1-%E4%BC%8A%E9%87%8C%E5%A5%87%E4%B9%8B%E6%AD%BB-%E4%B8%80%E8%BC%A9%E5%AD%90%E6%9C%89%E5%A4%9A%E5%8E%9A-e9fe3e04fbe6">《伊凡‧伊里奇之死》一輩子有多厚？</a><br>
+<b>Oct 1, 2023</b> <a href="https://chichinghsu.medium.com/%E4%BF%9D%E5%8A%A0%E5%88%A9%E4%BA%9E%E7%B4%A2%E8%8F%B2%E4%BA%9E-2023-%E5%B9%B4%E5%A4%8F-3f9185987f3f">保加利亞索菲亞 2023 年夏</a><br>
+<b>Aug 6, 2023</b> <a href="https://chichinghsu.medium.com/%E5%B0%8F%E6%95%85%E4%BA%8B%E7%9A%84%E7%B8%BD%E5%92%8C-e37de4e15975">小故事的總和</a><br>
+<b>May 30, 2023</b> <a href="https://chichinghsu.medium.com/%E7%AC%AC11%E6%9C%AC%E5%B0%8F%E8%AA%AA-%E7%AC%AC18%E6%9C%AC%E6%9B%B8-%E8%8D%92%E8%AC%AC%E8%88%87%E5%90%88%E7%90%86%E7%9A%84%E6%9B%96%E6%98%A7%E7%95%8C%E7%B7%9A-7d292f677176">《第11本小說，第18本書》荒謬與合理的曖昧界線</a><br>
+<b>May 25, 2023</b> <a href="https://chichinghsu.medium.com/%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-alvar-aalto-%E4%B9%8B%E6%97%85-3cd33ad8a4ce">赫爾辛基 Alvar Aalto 之旅</a><br>
 
 <!-- <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
@@ -62,6 +68,9 @@ b {padding-left:2em; }
 <hr style="width:50%;text-align:left;margin-left:2em;">
 
 <div class="category" id="travel"><h3>遊記 Travel</h3></div>
+<b>May 4, 2024</b> <a href="https://chichinghsu.medium.com/%E8%8A%AC%E8%98%AD%E8%88%AA%E7%A9%BA-%E6%9D%B1%E4%BA%AC%E7%BE%BD%E7%94%B0-%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-0c28960ee0fc">芬蘭航空 東京羽田 — 赫爾辛基</a><br>
+<b>Feb 4, 2024</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E5%BA%95%E5%9B%9E%E5%8F%B0%E8%A8%98-daf155eddd09">2023 年底回台記</a><br>
+<b>Oct 1, 2023</b> <a href="https://chichinghsu.medium.com/%E4%BF%9D%E5%8A%A0%E5%88%A9%E4%BA%9E%E7%B4%A2%E8%8F%B2%E4%BA%9E-2023-%E5%B9%B4%E5%A4%8F-3f9185987f3f">保加利亞索菲亞 2023 年夏</a><br>
 <b>Apr 29, 2023</b> <a href="https://chichinghsu.medium.com/%E8%8A%AC%E8%98%AD%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-2023-%E5%B9%B4%E6%98%A5-46d3a72a955b">芬蘭赫爾辛基 2023 年春</a><br>
 <b>Feb 12, 2023</b> <a href="https://chichinghsu.medium.com/%E6%B3%A2%E7%BE%85%E7%9A%84%E6%B5%B7%E4%B8%89%E5%B0%8F%E5%9C%8B%E4%B9%8B%E6%84%9B%E6%B2%99%E5%B0%BC%E4%BA%9E%E9%9B%9C%E8%AB%87-9c380adb21dd">波羅的海三小國之愛沙尼亞雜談</a><br>
 <b>Nov 2, 2022</b> <a href="https://chichinghsu.medium.com/%E6%8D%B7%E5%85%8B%E5%B8%83%E6%8B%89%E6%A0%BC-2022-%E5%B9%B4%E7%A7%8B-148f6d8747d5">捷克布拉格 2022 年秋</a><br>
@@ -77,6 +86,7 @@ b {padding-left:2em; }
 <b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <div class="category" id="switzerland"><h3>瑞士 Switzerland</h3></div>
+<b>Feb 27, 2024</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AF%E9%9B%9C%E8%AB%87-50504948fd05">瑞士鐵路雜談</a><br>
 <b>Sept 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%98%87%E9%BB%8E%E4%B8%96%E5%B0%84%E6%93%8A%E7%AF%80%E8%88%87%E7%A7%8B%E5%A4%A9%E5%B1%85%E7%95%99%E8%AD%89-a2966f791d0b">蘇黎世射擊節與秋天居留證</a><br>
 <b>Aug 28, 2022</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%B0%B4%E5%8A%9B%E7%99%BC%E9%9B%BB%E5%BB%A0%E4%B8%80%E6%97%A5%E9%81%8A-7c2f2bf036c0">瑞士水力發電廠一日遊</a><br>
 <b>Apr 18, 2022</b> <a href="https://chichinghsu.medium.com/%E5%AE%89%E8%83%BD%E8%BE%A8%E6%88%91%E5%9C%A8%E7%91%9E%E5%A3%AB%E5%BE%B7%E5%9C%8B-a047f9489a44">安能辨我在瑞士德國</a><br>
@@ -94,6 +104,7 @@ b {padding-left:2em; }
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
 <div class="category" id="eth_zuerich"><h3>學校生活 ETH Zürich</h3></div>
+<b>June 30, 2024</b> <a href="https://chichinghsu.medium.com/%E8%BF%BD%E6%A0%B9%E7%A9%B6%E6%9F%A2%E7%9A%84%E7%B2%BE%E7%A5%9E-f8cf1280f4a1">追根究柢的精神</a><br>
 <b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
 <b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
 <b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
@@ -103,6 +114,8 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <div class="category" id="books"><h3>書 Books</h3></div>
+<b>Nov 26, 2023</b> <a href="https://chichinghsu.medium.com/%E4%BC%8A%E5%87%A1-%E4%BC%8A%E9%87%8C%E5%A5%87%E4%B9%8B%E6%AD%BB-%E4%B8%80%E8%BC%A9%E5%AD%90%E6%9C%89%E5%A4%9A%E5%8E%9A-e9fe3e04fbe6">《伊凡‧伊里奇之死》一輩子有多厚？</a><br>
+<b>May 30, 2023</b> <a href="https://chichinghsu.medium.com/%E7%AC%AC11%E6%9C%AC%E5%B0%8F%E8%AA%AA-%E7%AC%AC18%E6%9C%AC%E6%9B%B8-%E8%8D%92%E8%AC%AC%E8%88%87%E5%90%88%E7%90%86%E7%9A%84%E6%9B%96%E6%98%A7%E7%95%8C%E7%B7%9A-7d292f677176">《第11本小說，第18本書》荒謬與合理的曖昧界線</a><br>
 <b>Apr 10, 2023</b> <a href="https://chichinghsu.medium.com/%E5%BE%AE%E8%BB%9F-paul-allen-%E5%9B%9E%E6%86%B6%E9%8C%84-idea-man-eeaa5df29a19">微軟 Paul Allen 回憶錄 Idea Man</a><br>
 <b>Mar 6, 2022</b> <a href="https://chichinghsu.medium.com/%E6%9D%B1%E4%BA%AC-%E8%8B%A5%E5%8D%B3%E8%8B%A5%E9%9B%A2-%E5%BE%98%E5%BE%8A%E9%81%8E%E5%A4%9A%E5%B0%91%E6%AB%A5%E7%AA%97-3eda1ce88628">《東京，若即若離》徘徊過多少櫥窗</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
@@ -121,6 +134,7 @@ b {padding-left:2em; }
 
 
 <div class="category" id="others"><h3>其他 Others</h3></div>
+<b>Aug 6, 2023</b> <a href="https://chichinghsu.medium.com/%E5%B0%8F%E6%95%85%E4%BA%8B%E7%9A%84%E7%B8%BD%E5%92%8C-e37de4e15975">小故事的總和</a><br>
 <b>Jan 29, 2023</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E9%91%91%E5%BE%80%E7%9F%A5%E4%BE%86-ce60df40d748">2023 年第一篇之鑑往知來</a><br>
 <b>Nov 20, 2022</b> <a href="https://chichinghsu.medium.com/%E6%95%99%E4%BD%A0%E5%A6%82%E4%BD%95%E8%B2%B7%E5%88%B0%E5%8D%8A%E5%83%B9%E5%BE%B7%E5%9C%8B%E7%81%AB%E8%BB%8A%E7%A5%A8-335b326e2206">教你如何買到半價德國火車票</a><br>
 <b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
@@ -136,6 +150,12 @@ b {padding-left:2em; }
 <b>Feb 3, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%82%84%E6%98%AF%E8%A6%81%E6%9C%89%E4%B8%80%E6%8A%80%E4%B9%8B%E9%95%B7%E5%95%8A-be28ad188fac">還是要有一技之長啊！</a><br>
 <b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
 
+<div class="category" id="architecture"><h3>建築 Architecture</h3></div>
+<b>May 25, 2023</b> <a hre="https://chichinghsu.medium.com/%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-alvar-aalto-%E4%B9%8B%E6%97%85-3cd33ad8a4ce">赫爾辛基 Alvar Aalto 之旅</a><br>
+<b>May 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%8A%A0%E5%88%A9%E8%A5%BF%E4%BA%9E-city-of-culture-of-galicia-%E8%A6%8B%E8%81%9E-50cc5e677584">西班牙加利西亞 City of Culture of Galicia 見聞</a><br>
+<b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
+</body></html> 
+
 <div class="category" id="data"><h3>數據分析 Data</h3></div>
 <b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540"> Wordle 英文版跟注音版之你不知道的事</a><br>
 <b>Dec 24, 2020</b> <a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d">台灣 Podcast 2020年 12月排名觀察報告</a><br>
@@ -145,7 +165,3 @@ b {padding-left:2em; }
 <b>Nov 20, 2020</b> <a href="https://chichinghsu.medium.com/%E8%93%8B%E8%8C%B2%E4%B9%8B%E9%81%93-%E7%96%91%E9%9B%A3%E8%A7%A3%E6%B3%95-%E6%88%91%E5%80%91%E4%B8%8D%E4%B8%80%E6%A8%A3-%E4%BD%86%E4%B9%9F%E6%B2%92%E9%82%A3%E9%BA%BC%E4%B8%8D%E4%B8%80%E6%A8%A3-442d6f9995e7">《蓋茲之道：疑難解法》我們不一樣，但也沒那麼不一樣</a><br>
 <b>June 6, 2020</b> <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a>
 
-<div class="category" id="architecture"><h3>建築 Architecture</h3></div>
-<b>May 18, 2022</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%8A%A0%E5%88%A9%E8%A5%BF%E4%BA%9E-city-of-culture-of-galicia-%E8%A6%8B%E8%81%9E-50cc5e677584">西班牙加利西亞 City of Culture of Galicia 見聞</a><br>
-<b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
-</body></html> 
