--- a/index.html
+++ b/index.html
@@ -38,15 +38,11 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Aug 1, 2024</b> <a href="https://chichinghsu.medium.com/youtube-%E8%A7%80%E7%9C%8B%E6%95%B8%E7%9A%84%E7%A7%98%E5%AF%86-60ef18b9ae86">YouTube 觀看數的秘密</a><br>
 <b>June 30, 2024</b> <a href="https://chichinghsu.medium.com/%E8%BF%BD%E6%A0%B9%E7%A9%B6%E6%9F%A2%E7%9A%84%E7%B2%BE%E7%A5%9E-f8cf1280f4a1">追根究柢的精神</a><br>
 <b>May 4, 2024</b> <a href="https://chichinghsu.medium.com/%E8%8A%AC%E8%98%AD%E8%88%AA%E7%A9%BA-%E6%9D%B1%E4%BA%AC%E7%BE%BD%E7%94%B0-%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-0c28960ee0fc">芬蘭航空 東京羽田 — 赫爾辛基</a><br>
 <b>Feb 27, 2024</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AF%E9%9B%9C%E8%AB%87-50504948fd05">瑞士鐵路雜談</a><br>
 <b>Feb 4, 2024</b> <a href="https://chichinghsu.medium.com/2023-%E5%B9%B4%E5%BA%95%E5%9B%9E%E5%8F%B0%E8%A8%98-daf155eddd09">2023 年底回台記</a><br>
-<b>Nov 26, 2023</b> <a href="https://chichinghsu.medium.com/%E4%BC%8A%E5%87%A1-%E4%BC%8A%E9%87%8C%E5%A5%87%E4%B9%8B%E6%AD%BB-%E4%B8%80%E8%BC%A9%E5%AD%90%E6%9C%89%E5%A4%9A%E5%8E%9A-e9fe3e04fbe6">《伊凡‧伊里奇之死》一輩子有多厚？</a><br>
-<b>Oct 1, 2023</b> <a href="https://chichinghsu.medium.com/%E4%BF%9D%E5%8A%A0%E5%88%A9%E4%BA%9E%E7%B4%A2%E8%8F%B2%E4%BA%9E-2023-%E5%B9%B4%E5%A4%8F-3f9185987f3f">保加利亞索菲亞 2023 年夏</a><br>
-<b>Aug 6, 2023</b> <a href="https://chichinghsu.medium.com/%E5%B0%8F%E6%95%85%E4%BA%8B%E7%9A%84%E7%B8%BD%E5%92%8C-e37de4e15975">小故事的總和</a><br>
-<b>May 30, 2023</b> <a href="https://chichinghsu.medium.com/%E7%AC%AC11%E6%9C%AC%E5%B0%8F%E8%AA%AA-%E7%AC%AC18%E6%9C%AC%E6%9B%B8-%E8%8D%92%E8%AC%AC%E8%88%87%E5%90%88%E7%90%86%E7%9A%84%E6%9B%96%E6%98%A7%E7%95%8C%E7%B7%9A-7d292f677176">《第11本小說，第18本書》荒謬與合理的曖昧界線</a><br>
-<b>May 25, 2023</b> <a href="https://chichinghsu.medium.com/%E8%B5%AB%E7%88%BE%E8%BE%9B%E5%9F%BA-alvar-aalto-%E4%B9%8B%E6%97%85-3cd33ad8a4ce">赫爾辛基 Alvar Aalto 之旅</a><br>
 
 <!-- <h3>文章分類 Category</h3>
 <div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
@@ -157,6 +153,7 @@ b {padding-left:2em; }
 </body></html> 
 
 <div class="category" id="data"><h3>數據分析 Data</h3></div>
+<b>Aug 1, 2024</b> <a href="https://chichinghsu.medium.com/youtube-%E8%A7%80%E7%9C%8B%E6%95%B8%E7%9A%84%E7%A7%98%E5%AF%86-60ef18b9ae86">YouTube 觀看數的秘密</a><br>
 <b>Feb 10, 2022</b> <a href="https://chichinghsu.medium.com/wordle-%E8%8B%B1%E6%96%87%E7%89%88%E8%B7%9F%E6%B3%A8%E9%9F%B3%E7%89%88%E4%B9%8B%E4%BD%A0%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B-d62c337ff540"> Wordle 英文版跟注音版之你不知道的事</a><br>
 <b>Dec 24, 2020</b> <a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d">台灣 Podcast 2020年 12月排名觀察報告</a><br>
 <b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a>
